--- a/vukas_story.html
+++ b/vukas_story.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Countermapping Direct Provision</title>
+    <title>Vukasin's Story</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
@@ -96,7 +95,7 @@
 
 <div id="map"></div>
 <div id="story"></div>
-<script src="./config_intro.js"></script>
+<script src="./config.js"></script>
 <script>
 var layerTypes = {
     'fill': ['fill-opacity'],
